hard-gists/f234879ceb3a31e8ec54c601844ed706/run.log
=== Docker Run Log for f234879ceb3a31e8ec54c601844ed706 ===
Started at: Mi 29. Okt 21:23:43 CET 2025

[2025-10-29 21:23:43] START: Running container for f234879ceb3a31e8ec54c601844ed706
[2025-10-29 21:23:43] SUCCESS: Container d31e44029c1fdad4680677ee6b0a15c9ddf318c7b9267b6ee10557f2b9d5e2ec started for f234879ceb3a31e8ec54c601844ed706
=== Container logs for f234879ceb3a31e8ec54c601844ed706 ===
  File "/snippet.py", line 16
    print "Started press"
    ^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for f234879ceb3a31e8ec54c601844ed706 ===
[2025-10-29 21:23:45] INFO: Container d31e44029c1fdad4680677ee6b0a15c9ddf318c7b9267b6ee10557f2b9d5e2ec has stopped
